--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -27,6 +27,7 @@ Sprite2D:scale=true
 
 create_new_node=Rect2(510, 190, 900, 700)
 project_settings=Rect2(508, 96, 900, 700)
+editor_settings=Rect2(510, 190, 900, 700)
 
 [color_picker]
 
